# dance-coaching

./: .env.example  .gitignore  CLAUDE.md  LLM_BOOTSTRAP_PROMPT.md  README.md  docker-compose.gpu.yml  docker-compose.yml
worker/: .env.example  pyproject.toml  requirements.txt
worker/src/: main.py
worker/src/application/: orchestrator.py
worker/src/application/ports/: audio_processor.py  coaching.py  generation_backend.py  pose_extractor.py  video_stitcher.py
worker/src/application/use_cases/: coach_dance.py  generate_tutorial.py
worker/src/di/: container.py
worker/src/domain/: entities.py  errors.py  value_objects.py
worker/src/infrastructure/: config.py
worker/src/infrastructure/audio/: librosa_processor.py
worker/src/infrastructure/backends/: comfyui_backend.py  falai_backend.py  kling_backend.py  mimicmotion_backend.py  wavespeed_backend.py
worker/src/infrastructure/coaching/: dtw_aligner.py  scorer.py
worker/src/infrastructure/pose/: mediapipe_extractor.py
worker/src/infrastructure/queue/: bullmq_worker.py
worker/tests/e2e/: test_full_pipeline.py
worker/tests/harness/: fake_audio_processor.py  fake_backend.py  fake_comfyui_backend.py  fake_pose_extractor.py  fake_stitcher.py  sample_data.py
worker/tests/integration/: test_ffmpeg.py  test_mediapipe.py  test_pipeline_integration.py
worker/tests/unit/: test_coach_use_case.py  test_comfyui_backend.py  test_config.py  test_container.py  test_dtw.py  test_entities.py  test_falai_backend.py  test_kling_backend.py  test_orchestrator.py  test_scorer.py  test_wavespeed_backend.py
(+93 files in other folders)
